// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactARTComponents should generate a <Shape> with props for drawing the Circle 1`] = `
<Shape
  d={
     {
      "_pivotX": 0,
      "_pivotY": -10,
      "path": Array [
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": null,
      "penDownY": -10,
      "penX": 0,
      "penY": -10,
    }
  }
  fill="blue"
  radius={10}
  stroke="green"
  strokeWidth={3}
/>
`;

exports[`ReactARTComponents should generate a <Shape> with props for drawing the Rectangle 1`] = `
<Shape
  d={
     {
      "_pivotX": 0,
      "_pivotY": 0,
      "path": Array [
        [Function],
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": 0,
      "penDownY": 0,
      "penX": 0,
      "penY": 0,
    }
  }
  fill="blue"
  height={50}
  stroke="green"
  width={50}
/>
`;

exports[`ReactARTComponents should generate a <Shape> with props for drawing the Wedge 1`] = `
<Shape
  d={
     {
      "_pivotX": 0,
      "_pivotY": 50,
      "path": Array [
        [Function],
        [Function],
        [Function],
        [Function],
      ],
      "penDownX": null,
      "penDownY": 50,
      "penX": 0,
      "penY": 50,
    }
  }
  endAngle={360}
  fill="blue"
  outerRadius={50}
  startAngle={0}
/>
`;
